--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.5",
+    "datatable-component-library": "^1.0.3",
     "date-fns": "^3.6.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
