--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "datatable-component-library": "^1.0.5",
     "date-fns": "^3.6.0",
+    "nanoid": "^5.0.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.9.0",
